--- a/libipfix_110224/lib/Makefile
+++ b/libipfix_110224/lib/Makefile
@@ -37,7 +37,8 @@ DEFS = -DHAVE_CONFIG_H
 CPPFLAGS = 
 LDFLAGS = 
 LIBS = 
-CCOPT = -Wall -g
+#CCOPT = -Wall -g
+CCOPT = -Wall -g -m32
 #CCOPT = -Wall -g -fPIC
 INCLS = -I. -I.. -I../.. -I../libmisc
 CFLAGS = $(CCOPT) $(INCLS) $(DEFS)
