modified:   collector/Makefile 	modified:   probe/Makefile

--- a/libipfix_110224/collector/Makefile
+++ b/libipfix_110224/collector/Makefile
@@ -26,7 +26,8 @@ INSTALL_PROGRAM = ${INSTALL}
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_HEADER = $(INSTALL_DATA)
-CC = gcc
+#CC = gcc
+CC = gcc -m32
 EXEEXT = 
 OBJEXT = o
 PACKAGE = libipfix
