modified:   Makefile 	modified:   libipfix_110224/collector/Makefile 	modified:   libipfix_110224/examples/Makefile 	modified:   libipfix_110224/lib/Makefile 	modified:   libipfix_110224/libmisc/Makefile 	modified:   libipfix_110224/probe/Makefile 	modified:   libipfix_110224/test/makefile 	modified:   src/Makefile 	modified:   src/ac_app_handlers.c 	modified:   src/acop.c 	modified:   src/acop_data_exporter.c

--- a/libipfix_110224/examples/Makefile
+++ b/libipfix_110224/examples/Makefile
@@ -39,7 +39,7 @@ CPPFLAGS =
 LDFLAGS = 
 LIBS =    -L../lib -L../libmisc -lipfix -lmisc 
 #CCOPT = -Wall -g
-CCOPT = -Wall -g -m32
+CCOPT = -Wall -g ${ARCH}
 INCLS = -I. -I.. -I../lib -I../libmisc
 CFLAGS = $(CCOPT) $(INCLS) $(DEFS)
 
