--- a/libipfix_110224/lib/Makefile
+++ b/libipfix_110224/lib/Makefile
@@ -38,7 +38,7 @@ CPPFLAGS =
 LDFLAGS = 
 LIBS = 
 #CCOPT = -Wall -g
-CCOPT = -Wall -g -m32
+CCOPT = -Wall -g ${ARCH}
 #CCOPT = -Wall -g -fPIC
 INCLS = -I. -I.. -I../.. -I../libmisc
 CFLAGS = $(CCOPT) $(INCLS) $(DEFS)
