--- a/libipfix_110224/collector/Makefile
+++ b/libipfix_110224/collector/Makefile
@@ -27,7 +27,7 @@ INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_HEADER = $(INSTALL_DATA)
 #CC = gcc
-CC = gcc -m32
+CC = gcc ${ARCH}
 EXEEXT = 
 OBJEXT = o
 PACKAGE = libipfix
