--- a/libipfix_110224/libmisc/Makefile
+++ b/libipfix_110224/libmisc/Makefile
@@ -27,7 +27,7 @@ INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_HEADER = $(INSTALL_DATA)
 #CC = gcc
-CC = gcc -m32
+CC = gcc ${ARCH}
 EXEEXT = 
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 OBJEXT = o
